--- a/tools/pipelines/build-client.yml
+++ b/tools/pipelines/build-client.yml
@@ -113,6 +113,13 @@ pr:
     - tools/pipelines/templates/1ES/include-process-test-results.yml
     - scripts/*
 
+variables:
+  - template: /tools/pipelines/templates/1ES/include-vars.yml@self
+    parameters:
+      publishOverride: '${{ parameters.publishOverride }}'
+      releaseBuildOverride: '${{ parameters.releaseBuildOverride }}'
+      buildNumberInPatch: ''
+
 extends:
   template: /tools/pipelines/templates/1ES/build-npm-package.yml@self
   parameters:
