Fix auth in odsp-client example (#18702)
The auth in shared-tree-demo was returning the storage token as
undefined. `password` grant type is not generally recommended for
browser-side applications This PR replaces the auth using msal.


![image](https://github.com/microsoft/FluidFramework/assets/48232592/0a265b37-d72f-4571-b51d-fdd992a94403)

--- a/examples/service-clients/odsp-client/shared-tree-demo/package.json
+++ b/examples/service-clients/odsp-client/shared-tree-demo/package.json
@@ -33,6 +33,7 @@
 		"webpack:dev": "webpack --env development"
 	},
 	"dependencies": {
+		"@azure/msal-browser": "^2.34.0",
 		"@fluid-experimental/odsp-client": "workspace:~",
 		"@fluid-experimental/tree2": "workspace:~",
 		"@fluidframework/container-definitions": "workspace:~",
