--- a/build-tools/packages/build-cli/package.json
+++ b/build-tools/packages/build-cli/package.json
@@ -101,6 +101,7 @@
 		"inquirer": "^8.2.5",
 		"jssm": "^5.89.2",
 		"jssm-viz-cli": "^5.89.2",
+		"json5": "^2.2.3",
 		"latest-version": "^5.1.0",
 		"minimatch": "^7.4.6",
 		"node-fetch": "^2.6.9",
@@ -131,6 +132,7 @@
 		"@types/inquirer": "^8.2.6",
 		"@types/mocha": "^9.1.1",
 		"@types/node": "^18.18.6",
+		"@types/json5": "^2.2.0",
 		"@types/node-fetch": "^2.5.10",
 		"@types/prettier": "^2.7.3",
 		"@types/prompts": "^2.4.4",
