--- a/tools/pipelines/templates/build-npm-package.yml
+++ b/tools/pipelines/templates/build-npm-package.yml
@@ -341,13 +341,15 @@ extends:
                           buildDirectory: '${{ parameters.buildDirectory }}'
 
                   # Copy files so all artifacts we publish end up under the same parent folder.
-                  # The sourceFolder should be wherever the tinylicious log ends up in, after executing tests above.
-                  - task: CopyFiles@2
+                  # Source is wherever the tinylicious log ends up in, after executing tests above.
+                  # CopyFiles@2 failed with OOM for some reason so doing it "by hand".
+                  - task: Bash@3
                     displayName: Copy tinylicious.log to artifact staging directory
                     inputs:
-                      sourceFolder: '${{ parameters.buildDirectory }}/packages/test/test-end-to-end-tests'
-                      targetFolder: $(Build.ArtifactStagingDirectory)/tinyliciousLog
-                      contents: 'tinylicious.log'
+                      targetType: inline
+                      workingDirectory: '${{ parameters.buildDirectory }}/packages/test/test-end-to-end-tests'
+                      script: |
+                        cp tinylicious.log $(Build.ArtifactStagingDirectory)/tinyliciousLog
 
                   # At this point we want to publish the tinylicious.log artifact, but as part of 1ES migration
                   # that is now part of templateContext.outputs below.
