--- a/packages/runtime/id-compressor/package.json
+++ b/packages/runtime/id-compressor/package.json
@@ -1,12 +1,12 @@
 {
-	"name": "@fluidframework/container-runtime",
+	"name": "@fluidframework/id-compressor",
 	"version": "2.0.0-internal.7.4.0",
-	"description": "Fluid container runtime",
+	"description": "ID compressor",
 	"homepage": "https://fluidframework.com",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/microsoft/FluidFramework.git",
-		"directory": "packages/runtime/container-runtime"
+		"directory": "packages/runtime/id-compressor"
 	},
 	"license": "MIT",
 	"author": "Microsoft and contributors",
@@ -42,9 +42,7 @@
 		"test:mocha": "mocha --ignore \"dist/test/types/*\" --recursive dist/test -r node_modules/@fluidframework/mocha-test-setup",
 		"test:mocha:verbose": "cross-env FLUID_TEST_VERBOSE=1 npm run test:mocha",
 		"tsc": "tsc",
-		"tsc:watch": "tsc --watch",
-		"typetests:gen": "fluid-type-test-generator",
-		"typetests:prepare": "flub typetests --dir . --reset --previous --normalize"
+		"tsc:watch": "tsc --watch"
 	},
 	"c8": {
 		"all": true,
@@ -68,38 +66,22 @@
 	},
 	"dependencies": {
 		"@fluid-internal/client-utils": "workspace:~",
-		"@fluidframework/id-compressor": "workspace:~",
-		"@fluidframework/container-definitions": "workspace:~",
-		"@fluidframework/container-runtime-definitions": "workspace:~",
 		"@fluidframework/core-interfaces": "workspace:~",
 		"@fluidframework/core-utils": "workspace:~",
-		"@fluidframework/datastore": "workspace:~",
-		"@fluidframework/driver-definitions": "workspace:~",
-		"@fluidframework/driver-utils": "workspace:~",
-		"@fluidframework/protocol-definitions": "^3.0.0",
-		"@fluidframework/runtime-definitions": "workspace:~",
-		"@fluidframework/runtime-utils": "workspace:~",
 		"@fluidframework/telemetry-utils": "workspace:~",
-		"double-ended-queue": "^2.1.0-0",
-		"events": "^3.1.0",
-		"lz4js": "^0.2.0",
 		"sorted-btree": "^1.8.0",
 		"uuid": "^9.0.0"
 	},
 	"devDependencies": {
-		"@arethetypeswrong/cli": "^0.13.3",
 		"@fluid-private/stochastic-test-utils": "workspace:~",
 		"@fluid-tools/benchmark": "^0.48.0",
 		"@fluid-tools/build-cli": "^0.28.0",
 		"@fluidframework/build-common": "^2.0.3",
 		"@fluidframework/build-tools": "^0.28.0",
-		"@fluidframework/container-runtime-previous": "npm:@fluidframework/container-runtime@2.0.0-internal.7.2.0",
 		"@fluidframework/eslint-config-fluid": "^3.1.0",
 		"@fluidframework/mocha-test-setup": "workspace:~",
 		"@fluidframework/test-runtime-utils": "workspace:~",
 		"@microsoft/api-extractor": "^7.38.3",
-		"@types/double-ended-queue": "^2.1.0",
-		"@types/events": "^3.0.0",
 		"@types/mocha": "^9.1.1",
 		"@types/sinon": "^7.0.13",
 		"@types/uuid": "^9.0.2",
@@ -125,16 +107,6 @@
 					"api-extractor:esnext"
 				],
 				"script": false
-			}
-		}
-	},
-	"typeValidation": {
-		"broken": {
-			"ClassDeclaration_ContainerRuntime": {
-				"backCompat": false
-			},
-			"InterfaceDeclaration_IGCStats": {
-				"forwardCompat": false
 			}
 		}
 	}
