--- a/packages/runtime/runtime-definitions/tsconfig.json
+++ b/packages/runtime/runtime-definitions/tsconfig.json
@@ -6,5 +6,10 @@
 		"outDir": "./dist",
 		"composite": true,
 	},
-	"include": ["src/**/*"],
+	"include": [
+		"src/**/*",
+		"../id-compressor/src/types/persisted-types",
+		"../id-compressor/src/types/index.ts",
+		"../id-compressor/src/types/idCompressor.ts",
+	],
 }
