--- a/tools/api-markdown-documenter/package.json
+++ b/tools/api-markdown-documenter/package.json
@@ -71,7 +71,7 @@
 		"@fluid-tools/markdown-magic": "file:../markdown-magic",
 		"@fluidframework/build-common": "^2.0.3",
 		"@fluidframework/build-tools": "^0.26.1",
-		"@fluidframework/eslint-config-fluid": "^2.0.0",
+		"@fluidframework/eslint-config-fluid": "file:../../common/build/eslint-config-fluid",
 		"@fluidframework/mocha-test-setup": "~2.0.0-internal.6.2.0",
 		"@microsoft/api-extractor": "^7.38.3",
 		"@types/chai": "^4.3.4",
@@ -84,7 +84,7 @@
 		"copyfiles": "^2.4.1",
 		"cross-env": "^7.0.3",
 		"dir-compare": "^4.0.0",
-		"eslint": "~8.6.0",
+		"eslint": "~8.55.0",
 		"eslint-plugin-chai-expect": "^3.0.0",
 		"eslint-plugin-chai-friendly": "^0.7.2",
 		"good-fences": "^1.2.0",
