--- a/server/gitrest/packages/gitrest-base/package.json
+++ b/server/gitrest/packages/gitrest-base/package.json
@@ -26,7 +26,7 @@
 		"prettier": "prettier --check . --cache --ignore-path ../../.prettierignore",
 		"prettier:fix": "prettier --write . --cache --ignore-path ../../.prettierignore",
 		"start": "node dist/www.js",
-		"test": "mocha dist/test",
+		"test": "mocha dist/test --reporterOptions maxDiffSize=1024",
 		"test:coverage": "c8 npm test",
 		"tsc": "tsc"
 	},
