--- a/server/gitrest/packages/gitrest-base/package.json
+++ b/server/gitrest/packages/gitrest-base/package.json
@@ -91,6 +91,7 @@
 		"@types/nconf": "^0.10.0",
 		"@types/node": "^18.17.1",
 		"@types/rimraf": "^3.0.2",
+		"@types/sinon": "^17.0.2",
 		"@types/supertest": "^2.0.7",
 		"@types/uuid": "^3.4.4",
 		"@types/winston": "^2.4.4",
@@ -102,6 +103,7 @@
 		"mocha": "^10.1.0",
 		"rimraf": "^3.0.2",
 		"sillyname": "^0.1.0",
+		"sinon": "^17.0.1",
 		"supertest": "^3.4.2",
 		"typescript": "~4.5.5"
 	}
