--- a/azure/packages/external-controller/package.json
+++ b/azure/packages/external-controller/package.json
@@ -52,7 +52,7 @@
 		"uuid": "^9.0.0"
 	},
 	"devDependencies": {
-		"@fluid-experimental/devtools": "workspace:~",
+		"@fluidframework/devtools": "workspace:~",
 		"@fluidframework/build-common": "^2.0.3",
 		"@fluidframework/build-tools": "^0.28.0",
 		"@fluidframework/container-definitions": "workspace:~",
