--- a/packages/tools/devtools/devtools-example/package.json
+++ b/packages/tools/devtools/devtools-example/package.json
@@ -44,9 +44,9 @@
 		"@fluentui/react-components": "~9.19.1",
 		"@fluentui/react-icons": "^2.0.201",
 		"@fluid-example/example-utils": "workspace:~",
-		"@fluid-experimental/devtools": "workspace:~",
-		"@fluid-experimental/devtools-core": "workspace:~",
-		"@fluid-experimental/devtools-view": "workspace:~",
+		"@fluidframework/devtools": "workspace:~",
+		"@fluidframework/devtools-core": "workspace:~",
+		"@fluidframework/devtools-view": "workspace:~",
 		"@fluid-experimental/react-inputs": "workspace:~",
 		"@fluid-experimental/tree2": "workspace:~",
 		"@fluid-internal/client-utils": "workspace:~",
