--- a/packages/tools/devtools/devtools-core/package.json
+++ b/packages/tools/devtools/devtools-core/package.json
@@ -85,7 +85,7 @@
 		"@fluid-tools/build-cli": "^0.28.0",
 		"@fluidframework/build-common": "^2.0.3",
 		"@fluidframework/build-tools": "^0.28.0",
-		"@fluidframework/devtools-core-previous": "npm:@fluid-experimental/devtools-core@2.0.0-internal.8.0.0",
+		"@fluidframework/devtools-core-previous": "npm:@fluid-experimental/devtools-core@2.0.0-internal.7.2.0",
 		"@fluidframework/driver-definitions": "workspace:~",
 		"@fluidframework/eslint-config-fluid": "^3.1.0",
 		"@fluidframework/mocha-test-setup": "workspace:~",
@@ -130,6 +130,48 @@
 		"broken": {
 			"ClassDeclaration_DevtoolsLogger": {
 				"backCompat": false,
+				"forwardCompat": false
+			},
+			"InterfaceDeclaration_ContainerDevtoolsProps": {
+				"backCompat": false
+			},
+			"InterfaceDeclaration_FluidDevtoolsProps": {
+				"backCompat": false
+			},
+			"InterfaceDeclaration_FluidHandleNode": {
+				"forwardCompat": false
+			},
+			"InterfaceDeclaration_FluidObjectNodeBase": {
+				"forwardCompat": false
+			},
+			"InterfaceDeclaration_TreeNodeBase": {
+				"forwardCompat": false
+			},
+			"InterfaceDeclaration_UnknownObjectNode": {
+				"forwardCompat": false
+			},
+			"InterfaceDeclaration_ValueNodeBase": {
+				"forwardCompat": false
+			},
+			"InterfaceDeclaration_VisualNodeBase": {
+				"forwardCompat": false
+			},
+			"InterfaceDeclaration_VisualTreeNode": {
+				"forwardCompat": false
+			},
+			"InterfaceDeclaration_VisualValueNode": {
+				"forwardCompat": false
+			},
+			"TypeAliasDeclaration_Primitive": {
+				"forwardCompat": false
+			},
+			"TypeAliasDeclaration_RootHandleNode": {
+				"forwardCompat": false
+			},
+			"TypeAliasDeclaration_VisualChildNode": {
+				"forwardCompat": false
+			},
+			"TypeAliasDeclaration_VisualNode": {
 				"forwardCompat": false
 			},
 			"RemovedClassDeclaration_DevtoolsLogger": {
