--- a/azure/packages/azure-client/package.json
+++ b/azure/packages/azure-client/package.json
@@ -67,12 +67,12 @@
 		"@fluidframework/driver-utils": "workspace:~",
 		"@fluidframework/fluid-static": "workspace:~",
 		"@fluidframework/map": "workspace:~",
-		"@fluidframework/protocol-definitions": "^3.0.0",
+		"@fluidframework/protocol-definitions": "^3.1.0-223007",
 		"@fluidframework/routerlicious-driver": "workspace:~",
 		"@fluidframework/runtime-utils": "workspace:~",
-		"@fluidframework/server-services-client": "^2.0.1",
+		"@fluidframework/server-services-client": "^3.0.0-223236",
 		"@fluidframework/telemetry-utils": "workspace:~",
-		"axios": "^0.26.0"
+		"axios": "^1.6.2"
 	},
 	"devDependencies": {
 		"@arethetypeswrong/cli": "^0.13.3",
