--- a/azure/packages/external-controller/package.json
+++ b/azure/packages/external-controller/package.json
@@ -46,7 +46,7 @@
 		"@fluidframework/routerlicious-driver": "workspace:~",
 		"@fluidframework/telemetry-utils": "workspace:~",
 		"assert": "^2.0.0",
-		"axios": "^0.26.0",
+		"axios": "^1.6.2",
 		"events": "^3.1.0",
 		"fluid-framework": "workspace:~",
 		"uuid": "^9.0.0"
@@ -60,7 +60,7 @@
 		"@fluidframework/eslint-config-fluid": "^3.1.0",
 		"@fluidframework/fluid-static": "workspace:~",
 		"@fluidframework/local-driver": "workspace:~",
-		"@fluidframework/server-local-server": "^2.0.1",
+		"@fluidframework/server-local-server": "^3.0.0-223236",
 		"@fluidframework/test-runtime-utils": "workspace:~",
 		"@fluidframework/test-tools": "^1.0.195075",
 		"@types/expect-puppeteer": "2.2.1",
