--- a/packages/drivers/routerlicious-driver/package.json
+++ b/packages/drivers/routerlicious-driver/package.json
@@ -84,10 +84,10 @@
 		"@fluidframework/driver-base": "workspace:~",
 		"@fluidframework/driver-definitions": "workspace:~",
 		"@fluidframework/driver-utils": "workspace:~",
-		"@fluidframework/gitresources": "^2.0.1",
-		"@fluidframework/protocol-base": "^2.0.1",
-		"@fluidframework/protocol-definitions": "^3.0.0",
-		"@fluidframework/server-services-client": "^2.0.1",
+		"@fluidframework/gitresources": "^3.0.0-223236",
+		"@fluidframework/protocol-base": "^3.0.0-223236",
+		"@fluidframework/protocol-definitions": "^3.1.0-223007",
+		"@fluidframework/server-services-client": "^3.0.0-223236",
 		"@fluidframework/telemetry-utils": "workspace:~",
 		"cross-fetch": "^3.1.5",
 		"json-stringify-safe": "5.0.1",
@@ -110,7 +110,7 @@
 		"@types/sinon": "^7.0.13",
 		"@types/url-parse": "1.4.4",
 		"@types/uuid": "^9.0.2",
-		"axios": "^0.26.0",
+		"axios": "^1.6.2",
 		"c8": "^7.7.1",
 		"copyfiles": "^2.4.1",
 		"cross-env": "^7.0.3",
